bison.output
Terminals unused in grammar

   T_NOT
   T_ELSE
   T_LOOP


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line
    3      | input error line

    4 line: T_LINE
    5     | exp T_LINE
    6     | T_VAL T_EQUAL exp T_LINE
    7     | command T_LINE
    8     | check T_LINE
    9     | T_EXIT T_LINE

   10 command: T_PRINT T_LEFT T_VAL T_RIGHT T_LINE
   11        | T_PRINTLN T_LEFT T_VAL T_RIGHT T_LINE
   12        | T_PRINT T_LEFT exp T_RIGHT T_LINE
   13        | T_PRINTLN T_LEFT T_RIGHT T_LINE
   14        | T_PRINTLN T_LEFT exp T_RIGHT T_LINE
   15        | T_PRINT T_LEFT T_VAL T_COMMA T_HEX T_RIGHT T_LINE
   16        | T_PRINTLN T_LEFT T_VAL T_COMMA T_HEX T_RIGHT T_LINE
   17        | T_PRINT T_LEFT exp T_COMMA T_HEX T_RIGHT T_LINE
   18        | T_PRINTLN T_LEFT exp T_COMMA T_HEX T_RIGHT T_LINE
   19        | T_PRINT T_LEFT T_QUOTE T_STR T_QUOTE T_RIGHT T_LINE
   20        | T_PRINTLN T_LEFT T_QUOTE T_STR T_QUOTE T_RIGHT T_LINE
   21        | T_COND T_LEFT check T_RIGHT T_COLON command

   22 exp: T_NUM
   23    | exp T_PLUS exp
   24    | exp T_MINUS exp
   25    | exp T_MULTIPLY exp
   26    | exp T_DIVIDE exp
   27    | exp T_MOD exp
   28    | exp T_POW exp
   29    | T_MINUS exp
   30    | T_LEFT exp T_RIGHT

   31 check: exp T_GRATHER exp
   32      | exp T_LESS exp
   33      | exp T_GE exp
   34      | exp T_LE exp
   35      | exp T_NE exp
   36      | exp T_EQUAL exp


Terminals, with rules where they appear

$end (0) 0
error (256) 3
T_GRATHER (258) 31
T_LESS (259) 32
T_GE (260) 33
T_LE (261) 34
T_NE (262) 35
T_NOT (263)
T_EQUAL (264) 6 36
T_POW (265) 28
T_PLUS (266) 23
T_MINUS (267) 24 29
T_MULTIPLY (268) 25
T_DIVIDE (269) 26
T_LEFT (270) 10 11 12 13 14 15 16 17 18 19 20 21 30
T_RIGHT (271) 10 11 12 13 14 15 16 17 18 19 20 21 30
T_NUM (272) 22
T_COND (273) 21
T_ELSE (274)
T_LOOP (275)
T_VAL (276) 6 10 11 15 16
T_PRINT (277) 10 12 15 17 19
T_PRINTLN (278) 11 13 14 16 18 20
T_HEX (279) 15 16 17 18
T_COLON (280) 21
T_QUOTE (281) 19 20
T_LINE (282) 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20
T_COMMA (283) 15 16 17 18
T_EXIT (284) 9
T_STR (285) 19 20
T_MOD (286) 27
NEG (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
input (34)
    on left: 1 2 3, on right: 0 2 3
line (35)
    on left: 4 5 6 7 8 9, on right: 2 3
command (36)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21, on right: 7 21
exp (37)
    on left: 22 23 24 25 26 27 28 29 30, on right: 5 6 12 14 17 18
    23 24 25 26 27 28 29 30 31 32 33 34 35 36
check (38)
    on left: 31 32 33 34 35 36, on right: 8 21


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line
    3      | input . error line

    $end       shift, and go to state 2
    error      shift, and go to state 3
    T_MINUS    shift, and go to state 4
    T_LEFT     shift, and go to state 5
    T_NUM      shift, and go to state 6
    T_COND     shift, and go to state 7
    T_VAL      shift, and go to state 8
    T_PRINT    shift, and go to state 9
    T_PRINTLN  shift, and go to state 10
    T_LINE     shift, and go to state 11
    T_EXIT     shift, and go to state 12

    line     go to state 13
    command  go to state 14
    exp      go to state 15
    check    go to state 16


State 2

    0 $accept: input $end .

    $default  accept


State 3

    3 input: input error . line

    T_MINUS    shift, and go to state 4
    T_LEFT     shift, and go to state 5
    T_NUM      shift, and go to state 6
    T_COND     shift, and go to state 7
    T_VAL      shift, and go to state 8
    T_PRINT    shift, and go to state 9
    T_PRINTLN  shift, and go to state 10
    T_LINE     shift, and go to state 11
    T_EXIT     shift, and go to state 12

    line     go to state 17
    command  go to state 14
    exp      go to state 15
    check    go to state 16


State 4

   29 exp: T_MINUS . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 18


State 5

   30 exp: T_LEFT . exp T_RIGHT

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 19


State 6

   22 exp: T_NUM .

    $default  reduce using rule 22 (exp)


State 7

   21 command: T_COND . T_LEFT check T_RIGHT T_COLON command

    T_LEFT  shift, and go to state 20


State 8

    6 line: T_VAL . T_EQUAL exp T_LINE

    T_EQUAL  shift, and go to state 21


State 9

   10 command: T_PRINT . T_LEFT T_VAL T_RIGHT T_LINE
   12        | T_PRINT . T_LEFT exp T_RIGHT T_LINE
   15        | T_PRINT . T_LEFT T_VAL T_COMMA T_HEX T_RIGHT T_LINE
   17        | T_PRINT . T_LEFT exp T_COMMA T_HEX T_RIGHT T_LINE
   19        | T_PRINT . T_LEFT T_QUOTE T_STR T_QUOTE T_RIGHT T_LINE

    T_LEFT  shift, and go to state 22


State 10

   11 command: T_PRINTLN . T_LEFT T_VAL T_RIGHT T_LINE
   13        | T_PRINTLN . T_LEFT T_RIGHT T_LINE
   14        | T_PRINTLN . T_LEFT exp T_RIGHT T_LINE
   16        | T_PRINTLN . T_LEFT T_VAL T_COMMA T_HEX T_RIGHT T_LINE
   18        | T_PRINTLN . T_LEFT exp T_COMMA T_HEX T_RIGHT T_LINE
   20        | T_PRINTLN . T_LEFT T_QUOTE T_STR T_QUOTE T_RIGHT T_LINE

    T_LEFT  shift, and go to state 23


State 11

    4 line: T_LINE .

    $default  reduce using rule 4 (line)


State 12

    9 line: T_EXIT . T_LINE

    T_LINE  shift, and go to state 24


State 13

    2 input: input line .

    $default  reduce using rule 2 (input)


State 14

    7 line: command . T_LINE

    T_LINE  shift, and go to state 25


State 15

    5 line: exp . T_LINE
   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp
   31 check: exp . T_GRATHER exp
   32      | exp . T_LESS exp
   33      | exp . T_GE exp
   34      | exp . T_LE exp
   35      | exp . T_NE exp
   36      | exp . T_EQUAL exp

    T_GRATHER   shift, and go to state 26
    T_LESS      shift, and go to state 27
    T_GE        shift, and go to state 28
    T_LE        shift, and go to state 29
    T_NE        shift, and go to state 30
    T_EQUAL     shift, and go to state 31
    T_POW       shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_MINUS     shift, and go to state 34
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_LINE      shift, and go to state 37
    T_MOD       shift, and go to state 38


State 16

    8 line: check . T_LINE

    T_LINE  shift, and go to state 39


State 17

    3 input: input error line .

    $default  reduce using rule 3 (input)


State 18

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp
   29    | T_MINUS exp .

    T_POW  shift, and go to state 32

    $default  reduce using rule 29 (exp)


State 19

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp
   30    | T_LEFT exp . T_RIGHT

    T_POW       shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_MINUS     shift, and go to state 34
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_RIGHT     shift, and go to state 40
    T_MOD       shift, and go to state 38


State 20

   21 command: T_COND T_LEFT . check T_RIGHT T_COLON command

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp    go to state 41
    check  go to state 42


State 21

    6 line: T_VAL T_EQUAL . exp T_LINE

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 43


State 22

   10 command: T_PRINT T_LEFT . T_VAL T_RIGHT T_LINE
   12        | T_PRINT T_LEFT . exp T_RIGHT T_LINE
   15        | T_PRINT T_LEFT . T_VAL T_COMMA T_HEX T_RIGHT T_LINE
   17        | T_PRINT T_LEFT . exp T_COMMA T_HEX T_RIGHT T_LINE
   19        | T_PRINT T_LEFT . T_QUOTE T_STR T_QUOTE T_RIGHT T_LINE

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6
    T_VAL    shift, and go to state 44
    T_QUOTE  shift, and go to state 45

    exp  go to state 46


State 23

   11 command: T_PRINTLN T_LEFT . T_VAL T_RIGHT T_LINE
   13        | T_PRINTLN T_LEFT . T_RIGHT T_LINE
   14        | T_PRINTLN T_LEFT . exp T_RIGHT T_LINE
   16        | T_PRINTLN T_LEFT . T_VAL T_COMMA T_HEX T_RIGHT T_LINE
   18        | T_PRINTLN T_LEFT . exp T_COMMA T_HEX T_RIGHT T_LINE
   20        | T_PRINTLN T_LEFT . T_QUOTE T_STR T_QUOTE T_RIGHT T_LINE

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_RIGHT  shift, and go to state 47
    T_NUM    shift, and go to state 6
    T_VAL    shift, and go to state 48
    T_QUOTE  shift, and go to state 49

    exp  go to state 50


State 24

    9 line: T_EXIT T_LINE .

    $default  reduce using rule 9 (line)


State 25

    7 line: command T_LINE .

    $default  reduce using rule 7 (line)


State 26

   31 check: exp T_GRATHER . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 51


State 27

   32 check: exp T_LESS . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 52


State 28

   33 check: exp T_GE . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 53


State 29

   34 check: exp T_LE . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 54


State 30

   35 check: exp T_NE . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 55


State 31

   36 check: exp T_EQUAL . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 56


State 32

   28 exp: exp T_POW . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 57


State 33

   23 exp: exp T_PLUS . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 58


State 34

   24 exp: exp T_MINUS . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 59


State 35

   25 exp: exp T_MULTIPLY . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 60


State 36

   26 exp: exp T_DIVIDE . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 61


State 37

    5 line: exp T_LINE .

    $default  reduce using rule 5 (line)


State 38

   27 exp: exp T_MOD . exp

    T_MINUS  shift, and go to state 4
    T_LEFT   shift, and go to state 5
    T_NUM    shift, and go to state 6

    exp  go to state 62


State 39

    8 line: check T_LINE .

    $default  reduce using rule 8 (line)


State 40

   30 exp: T_LEFT exp T_RIGHT .

    $default  reduce using rule 30 (exp)


State 41

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp
   31 check: exp . T_GRATHER exp
   32      | exp . T_LESS exp
   33      | exp . T_GE exp
   34      | exp . T_LE exp
   35      | exp . T_NE exp
   36      | exp . T_EQUAL exp

    T_GRATHER   shift, and go to state 26
    T_LESS      shift, and go to state 27
    T_GE        shift, and go to state 28
    T_LE        shift, and go to state 29
    T_NE        shift, and go to state 30
    T_EQUAL     shift, and go to state 31
    T_POW       shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_MINUS     shift, and go to state 34
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_MOD       shift, and go to state 38


State 42

   21 command: T_COND T_LEFT check . T_RIGHT T_COLON command

    T_RIGHT  shift, and go to state 63


State 43

    6 line: T_VAL T_EQUAL exp . T_LINE
   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp

    T_POW       shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_MINUS     shift, and go to state 34
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_LINE      shift, and go to state 64
    T_MOD       shift, and go to state 38


State 44

   10 command: T_PRINT T_LEFT T_VAL . T_RIGHT T_LINE
   15        | T_PRINT T_LEFT T_VAL . T_COMMA T_HEX T_RIGHT T_LINE

    T_RIGHT  shift, and go to state 65
    T_COMMA  shift, and go to state 66


State 45

   19 command: T_PRINT T_LEFT T_QUOTE . T_STR T_QUOTE T_RIGHT T_LINE

    T_STR  shift, and go to state 67


State 46

   12 command: T_PRINT T_LEFT exp . T_RIGHT T_LINE
   17        | T_PRINT T_LEFT exp . T_COMMA T_HEX T_RIGHT T_LINE
   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp

    T_POW       shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_MINUS     shift, and go to state 34
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_RIGHT     shift, and go to state 68
    T_COMMA     shift, and go to state 69
    T_MOD       shift, and go to state 38


State 47

   13 command: T_PRINTLN T_LEFT T_RIGHT . T_LINE

    T_LINE  shift, and go to state 70


State 48

   11 command: T_PRINTLN T_LEFT T_VAL . T_RIGHT T_LINE
   16        | T_PRINTLN T_LEFT T_VAL . T_COMMA T_HEX T_RIGHT T_LINE

    T_RIGHT  shift, and go to state 71
    T_COMMA  shift, and go to state 72


State 49

   20 command: T_PRINTLN T_LEFT T_QUOTE . T_STR T_QUOTE T_RIGHT T_LINE

    T_STR  shift, and go to state 73


State 50

   14 command: T_PRINTLN T_LEFT exp . T_RIGHT T_LINE
   18        | T_PRINTLN T_LEFT exp . T_COMMA T_HEX T_RIGHT T_LINE
   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp

    T_POW       shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_MINUS     shift, and go to state 34
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_RIGHT     shift, and go to state 74
    T_COMMA     shift, and go to state 75
    T_MOD       shift, and go to state 38


State 51

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp
   31 check: exp T_GRATHER exp .

    T_POW       shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_MINUS     shift, and go to state 34
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_MOD       shift, and go to state 38

    $default  reduce using rule 31 (check)


State 52

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp
   32 check: exp T_LESS exp .

    T_POW       shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_MINUS     shift, and go to state 34
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_MOD       shift, and go to state 38

    $default  reduce using rule 32 (check)


State 53

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp
   33 check: exp T_GE exp .

    T_POW       shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_MINUS     shift, and go to state 34
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_MOD       shift, and go to state 38

    $default  reduce using rule 33 (check)


State 54

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp
   34 check: exp T_LE exp .

    T_POW       shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_MINUS     shift, and go to state 34
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_MOD       shift, and go to state 38

    $default  reduce using rule 34 (check)


State 55

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp
   35 check: exp T_NE exp .

    T_POW       shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_MINUS     shift, and go to state 34
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_MOD       shift, and go to state 38

    $default  reduce using rule 35 (check)


State 56

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp
   36 check: exp T_EQUAL exp .

    T_POW       shift, and go to state 32
    T_PLUS      shift, and go to state 33
    T_MINUS     shift, and go to state 34
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_MOD       shift, and go to state 38

    $default  reduce using rule 36 (check)


State 57

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp
   28    | exp T_POW exp .

    T_POW  shift, and go to state 32

    $default  reduce using rule 28 (exp)


State 58

   23 exp: exp . T_PLUS exp
   23    | exp T_PLUS exp .
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp

    T_POW       shift, and go to state 32
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_MOD       shift, and go to state 38

    $default  reduce using rule 23 (exp)


State 59

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   24    | exp T_MINUS exp .
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp

    T_POW       shift, and go to state 32
    T_MULTIPLY  shift, and go to state 35
    T_DIVIDE    shift, and go to state 36
    T_MOD       shift, and go to state 38

    $default  reduce using rule 24 (exp)


State 60

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   25    | exp T_MULTIPLY exp .
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   28    | exp . T_POW exp

    T_POW  shift, and go to state 32

    $default  reduce using rule 25 (exp)


State 61

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   26    | exp T_DIVIDE exp .
   27    | exp . T_MOD exp
   28    | exp . T_POW exp

    T_POW  shift, and go to state 32

    $default  reduce using rule 26 (exp)


State 62

   23 exp: exp . T_PLUS exp
   24    | exp . T_MINUS exp
   25    | exp . T_MULTIPLY exp
   26    | exp . T_DIVIDE exp
   27    | exp . T_MOD exp
   27    | exp T_MOD exp .
   28    | exp . T_POW exp

    T_POW  shift, and go to state 32

    $default  reduce using rule 27 (exp)


State 63

   21 command: T_COND T_LEFT check T_RIGHT . T_COLON command

    T_COLON  shift, and go to state 76


State 64

    6 line: T_VAL T_EQUAL exp T_LINE .

    $default  reduce using rule 6 (line)


State 65

   10 command: T_PRINT T_LEFT T_VAL T_RIGHT . T_LINE

    T_LINE  shift, and go to state 77


State 66

   15 command: T_PRINT T_LEFT T_VAL T_COMMA . T_HEX T_RIGHT T_LINE

    T_HEX  shift, and go to state 78


State 67

   19 command: T_PRINT T_LEFT T_QUOTE T_STR . T_QUOTE T_RIGHT T_LINE

    T_QUOTE  shift, and go to state 79


State 68

   12 command: T_PRINT T_LEFT exp T_RIGHT . T_LINE

    T_LINE  shift, and go to state 80


State 69

   17 command: T_PRINT T_LEFT exp T_COMMA . T_HEX T_RIGHT T_LINE

    T_HEX  shift, and go to state 81


State 70

   13 command: T_PRINTLN T_LEFT T_RIGHT T_LINE .

    $default  reduce using rule 13 (command)


State 71

   11 command: T_PRINTLN T_LEFT T_VAL T_RIGHT . T_LINE

    T_LINE  shift, and go to state 82


State 72

   16 command: T_PRINTLN T_LEFT T_VAL T_COMMA . T_HEX T_RIGHT T_LINE

    T_HEX  shift, and go to state 83


State 73

   20 command: T_PRINTLN T_LEFT T_QUOTE T_STR . T_QUOTE T_RIGHT T_LINE

    T_QUOTE  shift, and go to state 84


State 74

   14 command: T_PRINTLN T_LEFT exp T_RIGHT . T_LINE

    T_LINE  shift, and go to state 85


State 75

   18 command: T_PRINTLN T_LEFT exp T_COMMA . T_HEX T_RIGHT T_LINE

    T_HEX  shift, and go to state 86


State 76

   21 command: T_COND T_LEFT check T_RIGHT T_COLON . command

    T_COND     shift, and go to state 7
    T_PRINT    shift, and go to state 9
    T_PRINTLN  shift, and go to state 10

    command  go to state 87


State 77

   10 command: T_PRINT T_LEFT T_VAL T_RIGHT T_LINE .

    $default  reduce using rule 10 (command)


State 78

   15 command: T_PRINT T_LEFT T_VAL T_COMMA T_HEX . T_RIGHT T_LINE

    T_RIGHT  shift, and go to state 88


State 79

   19 command: T_PRINT T_LEFT T_QUOTE T_STR T_QUOTE . T_RIGHT T_LINE

    T_RIGHT  shift, and go to state 89


State 80

   12 command: T_PRINT T_LEFT exp T_RIGHT T_LINE .

    $default  reduce using rule 12 (command)


State 81

   17 command: T_PRINT T_LEFT exp T_COMMA T_HEX . T_RIGHT T_LINE

    T_RIGHT  shift, and go to state 90


State 82

   11 command: T_PRINTLN T_LEFT T_VAL T_RIGHT T_LINE .
